feat(ENG-147): expose endpoint to get recommended boostrap accounts
